# ssasr_rpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: dinput8.cpp  dinput8.h  discord.cpp  discord.h  hooks.cpp  jenkins.h  lookup.cpp  lookup.h  main.cpp  native.h  rpc.cpp  ssr.cpp  ssr.h
